--- a/packages/components/src/components/tab-list/tab-list.scss
+++ b/packages/components/src/components/tab-list/tab-list.scss
@@ -13,4 +13,8 @@
 	@extend %db-overwrite-font-size-md;
 	@extend %scrollbar;
 
+	[data-orientation="vertical"] & {
+		flex-direction: column;
+		align-items: flex-start;
+	}
 }
